School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_print/printx_Var.deca
//Affichage d'une variable avec printx
//

{
    int a = 10;
    float b = 11.1;
    printx(a);
    printx("variable a = ", a);
    printx("variable b = ", b);
    printx(b);
}